@@ -1,3 +1,13 @@
+2011-09-19  Roland Winkler  <winkler@gnu.org>
+	* lisp/bbdb.el (bbdb-version): Do not use interactive-p.
+
+	* lisp/bbdb-message.el: Require sendmail for mail-mode-map.
+
+	* lisp/bbdb-anniv.el (number): Use with-no-warnings.
+
+	* lisp/bbdb-com.el (bbdb-divide-name): Fix regexp for matching
+	last name prefixes.
+
 2011-05-11  Roland Winkler  <winkler@gnu.org>
 	* lisp/bbdb-mua.el (bbdb-update-records): Fix previous patch.
 	(bbdb-prompt-for-create): Use special-mode.
